@@ -223,7 +223,7 @@ variable, referring to the path of the queue. Here \fIslowq\fR refers to
 the basename of the queue path.
 Default: 20.
 If 0, remote deliveries will be put on hold.
-.I concurrencyr.queue
+.I concurrencyr.slowq
 is limited at compile time to SPAWN.
 
 .TP 5
